--- a/index.html
+++ b/index.html
@@ -2,146 +2,151 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sajidh A K | Physics Student & STEM Educator</title>
+    <title>Sajidh A K | Physics & STEM Educator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
         body {
-            margin: 0;
-            font-family: "Segoe UI", Arial, sans-serif;
-            background-color: #f4f6f8;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        header {
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
-            color: white;
-            padding: 60px 20px;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        header p {
-            font-size: 1.1em;
-            margin-top: 10px;
+            background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
+            color: #ffffff;
+            overflow-x: hidden;
         }
 
         section {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 0 20px;
+            padding: 80px 10%;
         }
 
-        h2 {
-            color: #1e3c72;
-            border-bottom: 2px solid #1e3c72;
-            display: inline-block;
-            margin-bottom: 15px;
+        h1, h2 {
+            font-weight: 700;
         }
 
-        .card {
-            background: white;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+        p {
+            font-size: 1.05rem;
+            line-height: 1.8;
+            opacity: 0.95;
         }
 
-        ul {
-            padding-left: 20px;
+        .glass {
+            background: rgba(255, 255, 255, 0.12);
+            backdrop-filter: blur(12px);
+            border-radius: 16px;
+            padding: 30px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.3);
         }
 
-        footer {
-            background-color: #1e3c72;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 50px;
-            font-size: 0.9em;
-        }
-
-        a {
-            color: #1e3c72;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
+        .divider {
+            height: 4px;
+            width: 80px;
+            background: linear-gradient(to right, #ff9a9e, #fad0c4);
+            margin: 20px 0 40px;
+            border-radius: 10px;
         }
     </style>
 </head>
 <body>
 
-<header>
-    <h1>Sajidh A K</h1>
-    <p>First year Master's Student | STEM Educator | Science Communicator</p>
-</header>
 
 <section>
-    <h2>About Me</h2>
-    <div class="card">
-        <p>
-            I am a First year Master's student with a strong passion for teaching,
-            science communication, and hands-on STEM education. I enjoy breaking down complex
-            scientific concepts into simple, intuitive explanations that encourage curiosity
-            and conceptual understanding rather than rote learning.
+    <div class="glass">
+        <h1 style="font-size:3rem;">Sajidh A K</h1>
+        <div class="divider"></div>
+        <p style="font-size:1.2rem;">
+            Physics Undergraduate | STEM Educator | Science Communicator
+        </p>
+        <p style="margin-top:20px;">
+            I believe science is best learned through curiosity, experimentation, 
+            and meaningful explanation — not memorization.
         </p>
     </div>
 </section>
 
-<section>
-    <h2>Academic Background</h2>
-    <div class="card">
-        <ul>
-            <li>M.Sc. Physics – Final Year</li>
-            <li>Strong foundation in Classical Mechanics, Quantum Mechanics, Electronics, and Optics</li>
-            <li>Active involvement in academic presentations and outreach programs</li>
-        </ul>
-    </div>
-</section>
 
 <section>
-    <h2>Skills</h2>
-    <div class="card">
-        <ul>
-            <li>STEM Teaching & Demonstrations</li>
-            <li>Physics Problem Solving</li>
-            <li>Arduino & Basic Electronics</li>
-            <li>Presentation & Public Speaking</li>
-            <li>Content Creation for Science Education</li>
-        </ul>
-    </div>
-</section>
-
-<section>
-    <h2>Experience & Activities</h2>
-    <div class="card">
-        <ul>
-            <li>Conducted STEM workshops and outreach programs for school students</li>
-            <li>Delivered concept-based Physics sessions for classes 9–12</li>
-            <li>Participated in innovation forums, science exhibitions, and academic events</li>
-            <li>Sports Secretary – Department of Physics</li>
-        </ul>
-    </div>
-</section>
-
-<section>
-    <h2>Contact</h2>
-    <div class="card">
+    <div class="glass">
+        <h2>About Me</h2>
+        <div class="divider"></div>
         <p>
-            <strong>Email:</strong> your-email@example.com <br>
-            <strong>LinkedIn:</strong> <a href="#">linkedin.com/in/yourprofile</a>
+            I am a final-year undergraduate Physics student with a deep interest in 
+            teaching, STEM outreach, and hands-on learning. My academic journey has 
+            shaped my approach to science as something that should be explored, 
+            questioned, and experienced.
+        </p>
+        <p style="margin-top:15px;">
+            I actively engage in teaching students from school to undergraduate levels, 
+            designing sessions that focus on intuition, real-world analogies, and 
+            experimental thinking.
         </p>
     </div>
 </section>
 
-<footer>
-    © 2026 Sajidh A K | Personal Website
+
+/index.html
+/images/
+   teaching1.jpg
+   teaching2.jpg
+
+
+<section>
+    <h2>Teaching & Outreach</h2>
+    <div class="divider"></div>
+
+    <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap:30px;">
+        
+        <div class="glass">
+            <img src="images/teaching1.jpg" style="width:100%; border-radius:12px;">
+            <p style="margin-top:15px;">
+                Conducting interactive STEM sessions focusing on conceptual clarity
+                and hands-on learning.
+            </p>
+        </div>
+
+        <div class="glass">
+            <img src="images/teaching2.jpg" style="width:100%; border-radius:12px;">
+            <p style="margin-top:15px;">
+                Demonstrating experiments and encouraging inquiry-based learning
+                among students.
+            </p>
+        </div>
+
+    </div>
+</section>
+
+
+<section>
+    <div class="glass">
+        <h2>Skills & Interests</h2>
+        <div class="divider"></div>
+
+        <ul style="list-style:none; display:grid; grid-template-columns: repeat(auto-fit, minmax(200px,1fr)); gap:15px;">
+            <li>🔬 Physics Teaching</li>
+            <li>🧠 Concept-Based Learning</li>
+            <li>⚙️ Arduino & Electronics</li>
+            <li>📢 Science Communication</li>
+            <li>🚀 STEM Outreach</li>
+            <li>🎤 Public Speaking</li>
+        </ul>
+    </div>
+</section>
+
+
+<footer style="text-align:center; padding:30px; opacity:0.8;">
+    © 2026 Sajidh A K | Personal Academic Website
 </footer>
 
 </body>
 </html>
+
+
+</body>
+</html>
+
